--- a/README.rdoc
+++ b/README.rdoc
@@ -5,17 +5,17 @@ application up and running.
 
 Things you may want to cover:
 
-* Ruby version
+* Ruby version  2.2.1p85
 
 * System dependencies
 
 * Configuration
 
-* Database creation
+* Database creation   "rake db:create" in terminal (head proyect folder)
 
-* Database initialization
+* Database initialization "rake db:migrate"
 
-* How to run the test suite
+* How to run the test suite: in head directory of proyect run the command "rake test" in a terminal
 
 * Services (job queues, cache servers, search engines, etc.)
 
