--- a/README.rdoc
+++ b/README.rdoc
@@ -19,7 +19,7 @@ Things you may want to cover:
 
 * Services (job queues, cache servers, search engines, etc.)
 
-* Deployment instructions
+* Deployment instructions : terminal (head proyect directory) "rails server"  Must have ruby on rails installed
 
 * ...
 
