--- a/README.rdoc
+++ b/README.rdoc
@@ -13,11 +13,11 @@ Things you may want to cover:
 
 * Configuration
 
-* Database creation   "rake db:create" in terminal (head proyect folder)
+* Database creation   "rake db:create" in terminal (head project folder)
 
 * Database initialization "rake db:migrate"
 
-* How to run the test suite: in head directory of proyect run the command "rake test" in a terminal
+* How to run the test suite: in head directory of project run the command "rake test" in a terminal
 
 * Services (job queues, cache servers, search engines, etc.)
 
